# DownSample

./: README.md
DownSample_catapult/: CMakeLists.txt  Catapult.ccs  TestBench.cpp  ccs_bmpfile.cpp  ccs_bmpfile.h  class_hier_design.cpp  class_hier_design.h
downsample_LJL/: CMakeLists.txt  detect.cpp  down_ln.h  down_shreg.h
downsample_LJL/include/: ac_array.h  ac_buffer_2d.h  ac_chandup.h  ac_dsp_utils.h  ac_math.h  ac_matlab.h  ac_matrix.h  ac_probe.h  ac_reset_signal_is.h  ac_stage.h  ac_sync.h  ac_wait.h  ac_window.h  ac_window_1d_array.h  ac_window_1d_flag.h  ac_window_1d_stream.h  ac_window_2d_flag.h  ac_window_2d_stream.h  ac_window_structs.h  ac_wndo.h  ccs_gp_typeconv.h  ccs_jpgfile.cpp  ccs_jpgfile.h  ccs_jpgfile_tables.h  ccs_probe_comparator.h  ccs_sample_mem.h  ccs_sysc_ram.h  ccs_wavefile.cpp  ccs_wavefile.h  csvparser.c  csvparser.h  mc_base.h  mc_bitvector.h  mc_comparator.h  mc_end_of_testbench.h  mc_fixed.h  mc_int.h  mc_interface_channel.h  mc_monitor.h  mc_random.h  (+20 more)
downsample_LJL/include/ac_ipl/: ac_boundary.h  ac_conv_NxN_stride_N_alg.h  ac_convolution.h  ac_line_buffer.h  ac_pixels.h  ac_shift_reg.h
downsample_LJL/include/ac_math/: ac_abs.h  ac_arccos_cordic.h  ac_arcsin_cordic.h  ac_atan2_cordic.h  ac_atan_pwl.h  ac_chol_d.h  ac_cholinv.h  ac_determinant.h  ac_div.h  ac_hcordic.h  ac_inverse_sqrt_pwl.h  ac_log_pwl.h  ac_matrixmul.h  ac_normalize.h  ac_pow_pwl.h  ac_qrd.h  ac_random.h  ac_reciprocal_pwl.h  ac_shift.h  ac_sigmoid_pwl.h  ac_sincos_cordic.h  ac_sincos_lut.h  ac_sqrt.h  ac_sqrt_pwl.h  ac_tan_pwl.h  ac_tanh_pwl.h
(+79 files in other folders)
